2010-07-12  Alan McGovern  <amcgovern@novell.com>

	* misc/DefaultValues.cs: Removed a MoonlightBug from a passing
	  test.

2010-07-12  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ContentControlTest.cs: Whoops,
	  remove a C.RL

2010-07-09  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ContentControlTest.cs: Add a test
	  for the last ManagedXamlLoader fix

2010-07-08  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Net.Browser/BaseHttpWebRequestTest.cs: Split some test
	cases and add a new one for Proxy-Authorization

2010-07-08  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Data/BindingTest.cs: Update these two tests
	  so they don't make me think that exceptions are being thrown
	  inside the SetBinding () path.

2010-07-08  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ItemContainerGeneratorTest.cs:
	  Commit the test for the last ItemContainerGenerator fix.

2010-07-08  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Data/BindingTest.cs: Add an extra test to
	  verify the mentor is used for FrameworkElements who have no
	  parent element and have a binding on their datacontext.

2010-07-07  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/FrameworkElementTest.cs:
	* System.Windows.Controls/ItemsControlTest.cs: Make sure empty
	  collections in ItemsSource result in a LayoutUpdated event
	  being raised. Fixes part of DRT 348 and the new moon-unit

2010-07-07  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows.Interop/SilverlightHostTest.cs: Add async test
	cases for NavigationState[Changed]

2010-07-06  Alan McGovern  <amcgovern@novell.com>

	* misc/DefaultValues.cs: Update the default values tests for
	  SL4.

2010-07-06  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows.Interop/SilverlightHostTest.cs: Add more test 
	cases for NavigationState[ChangedEventArgs] including cases where
	the event is not fired.
